Fix layout drawer scrollbars when coming from right

--- a/src/components/layout/layout.ios.styl
+++ b/src/components/layout/layout.ios.styl
@@ -64,6 +64,8 @@ body
 
   &.with-layout-drawer-opened
     overflow hidden
+  &.with-layout-drawer-opened-above
+    overflow-x hidden
 
   &.cordova.platform-ios
     .q-layout-header > .q-toolbar:first-child, .q-layout-drawer.top-padding
